# SCDL-RAG-Enhanced-Architecture

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  AUDIT_REPORT.md  Dockerfile  LICENSE  README.md  SCDL-RAG-Enhanced-Architecture.md  VALIDATION_REPORT.md  check_hotpotqa.py  debug_contradiction.js  docker-compose.yml  package-lock.json  package.json  requirements-pbt.txt  roadmapproduction.md  test_integration.py  tsconfig.json  vitest.config.ts
reference/isre/: MARKET_ANALYSIS_AND_PAIN_POINTS.md  console_test.py  demo_paraphrase_and_conflict.py  final_coverage_report.txt  pyproject.toml  test_adversarial_output.txt  test_graph_integrity_output.txt  test_knowledge_results.txt  test_knowledge_robustness_output.txt  test_meta_init_output.txt  test_meta_output.txt  test_meta_results.txt  test_modalities_output.txt  test_output.txt  test_output_utf8.txt  test_paraphrase_consistency.py  test_performance_output.txt  test_results_raw.txt  test_results_utf8.txt  test_robustness_output.txt  test_scalability_output.txt
reference/isre/docs/: COMPLETE_VALIDATION_SUMMARY.md  ISRE_100_QUESTIONS.md  REASONING_ENGINE_QUICKREF.md  REASONING_ENGINE_VALIDATION.md  TASK_TEST.md  TECHNICAL_VALIDATION.md  TEST_RESULTS.md
reference/isre/examples/: benchmarks.py  demo_intent_graph.py  demo_knowledge_integration.py  demo_reasoning_engine.py  isre_vs_llm_demo.py  semantic_pipeline_demo.py
reference/isre/tests/: conftest.py  test_adversarial.py  test_architecture.py  test_compression.py  test_extensibility.py  test_final_coverage.py  test_graph.py  test_graph_integrity.py  (+14 more)
(+211 files in other folders)
